--- a/css/style.css
+++ b/css/style.css
@@ -4,12 +4,26 @@
         font-weight: 400;
         font-style: normal;
 }
+    .bebas-neue-regular {
+        font-family: "Bebas Neue", sans-serif;
+        font-weight: 400;
+        font-style: normal;
+}
 
 }
 
 
+html{
+    height: 100%;
+}
+
 body {
     margin: 0px;
+    height: 100%;
+}
+
+main{
+    height: 100%
 }
 
 #fullheader{
@@ -45,3 +59,27 @@ body {
 }
 
 }
+
+/* Hero Banner CSS */
+.hero_image{
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../images/avengers_hero_banner.jpg");
+    height: 50%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+    overflow: auto;
+}
+
+.hero_text{
+    font-family: "Bebas Neue", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
+} 
+
