--- a/css/style.css
+++ b/css/style.css
@@ -9,27 +9,26 @@
         font-weight: 400;
         font-style: normal;
 }
+    --cham: #F6EFD2;
+    --pred: #E43636;
+    --beige: #E2DDB4;
 
 }
 
 *::selection{
-    background-color: rgb(255, 46, 46);
-}
-
-
-html{
-    height: 100%;
+    background-color: var(--pred);
+    color: white;
 }
 
 body {
     margin: 0px;
-    height: 100%;
     display: flex;
     flex-direction: column;
 }
 
-main{
-    height: 100%
+main{    
+    background-color: var(--cham);
+    position: static;
 }
 
 #fullheader{
@@ -52,7 +51,7 @@ main{
         font-family: "Limelight", sans-serif;
         font-weight: 400;
         font-style: normal;
-        color: rgb(173, 0, 0);
+        color: var(--pred);
         margin: 0;
         align-items: center;
         display: flex;
@@ -74,18 +73,30 @@ main{
         gap: 30px;
         padding: 0;
 
-    a {
-        color: rgb(173, 0, 0);
+    .navbutton{
+        background-color: var(--beige);
+        padding: 16px 32px;
+        border-radius: 1ch;
+        border: none;
+        color: var(--pred);
         text-decoration: none;
-        font-weight: 700;
-        font-size: 20px;
-        transition-duration: 300ms;
-
+        font-family: "Bebas Neue", sans-serif;
+        font-weight: 400;
+        font-style: normal;
+        font-size: 3ch;
     }
-
-    a:hover {
-        color: rgb(255, 46, 46);
-        transition-duration: 300ms;
+    
+    .currentbutton{
+        background-color: var(--pred);
+        color:var(--beige);
+        padding: 16px 32px;
+        border-radius: 1ch;
+        border: none;
+        text-decoration: none;
+        font-family: "Bebas Neue", sans-serif;
+        font-weight: 400;
+        font-style: normal;
+        font-size: 3ch;
     }
 }
 
@@ -98,12 +109,13 @@ h1{
 /* Hero Banner CSS */
 .hero_image{
     background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../images/avengers_hero_banner.jpg");
-    height: 50%;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    position: relative;
+    height: 500px;
+    position: static;
     overflow: auto;
+    top: 0px;
 }
 
 .hero_text{
