--- a/css/style.css
+++ b/css/style.css
@@ -35,7 +35,7 @@ main{
     display: grid;
     grid-template-columns: auto auto;
     grid-template-rows: 1;
-    background-color: rgba(0, 0, 0, 0.219);
+    background-color: rgba(0, 0, 0, 0);
     backdrop-filter: blur(16px);
     position: fixed;
     top: 0;
@@ -84,6 +84,12 @@ main{
         font-weight: 400;
         font-style: normal;
         font-size: 3ch;
+        border: 4px solid transparent;
+        transition: border 300ms;
+    }
+
+    .navbutton:hover {
+        border: 4px solid var(--pred);
     }
     
     .currentbutton{
@@ -97,6 +103,12 @@ main{
         font-weight: 400;
         font-style: normal;
         font-size: 3ch;
+        border: 4px solid var(--pred);
+        transition: border 300ms;
+    }
+
+    .currentbutton:hover{
+        border: 4px solid var(--beige);
     }
 }
 
