Fixed overscroll issue

--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,10 @@ body {
     flex-direction: column;
 }
 
+html { 
+    overscroll-behavior: none;
+}
+
 main{    
     background-color: var(--cham);
     position: static;
