--- a/css/style.css
+++ b/css/style.css
@@ -245,3 +245,36 @@ h1{
     }
 
 }
+
+#footcontact{
+    padding: 0 5%;
+    font-family: "Bebas Neue", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    color:var(--cham)
+}
+
+footer{
+    background-color: var(--pred);
+    ul {
+        text-decoration: none;
+        color: var(--cham);
+        display: flex;
+        justify-content: space-between;
+        padding: 0 5%;
+        font-family: "Bebas Neue", sans-serif;
+        font-weight: 400;
+        font-style: normal;
+        list-style-type: none;
+
+        a{
+            text-decoration: none;
+            color: var(--cham);
+            transition-duration: 400ms;
+        }
+
+        a:hover{
+            color: var(--cadyellow);
+        }
+    }
+}
