--- a/css/style.css
+++ b/css/style.css
@@ -9,30 +9,53 @@
         font-weight: 400;
         font-style: normal;
 }
+    .roboto-normal {
+        font-family: "Roboto", sans-serif;
+        font-optical-sizing: auto;
+        font-weight: 400;
+        font-style: normal;
+        font-variation-settings:
+            "wdth" 100;
+}
+    --cham: #F6EFD2;
+    --pred: #E43636;
+    --beige: #E2DDB4;
 
 }
 
-
-html{
-    height: 100%;
+*::selection{
+    background-color: var(--pred);
+    color: white;
 }
 
 body {
     margin: 0px;
-    height: 100%;
+    display: flex;
+    flex-direction: column;
 }
 
-main{
-    height: 100%
+html { 
+    overscroll-behavior: none;
+}
+
+main{    
+    background-color: var(--cham);
+    position: static;
 }
 
 #fullheader{
     display: grid;
-    grid-template-columns: 2;
+    grid-template-columns: auto auto;
     grid-template-rows: 1;
-    background-color: gray;
-    padding-left: 24px;
-    padding-right: 24px;
+    background-color: rgba(0, 0, 0, 0);
+    backdrop-filter: blur(16px);
+    position: fixed;
+    top: 0;
+    width: 100vw;
+    height: 120px;
+    z-index: 1;
+    padding: 0 18px 0 24px;
+    box-sizing: border-box;
 
     #title{
         grid-column: 1;
@@ -40,6 +63,11 @@ main{
         font-family: "Limelight", sans-serif;
         font-weight: 400;
         font-style: normal;
+        font-size: 3ch;
+        color: var(--pred);
+        margin: 0;
+        align-items: center;
+        display: flex;
     }
 
     nav{
@@ -47,6 +75,7 @@ main{
         grid-column: 2;
         grid-row: 1;
     }
+    
     #navmenu{
         margin: 0px;
         height: 100%;
@@ -55,7 +84,51 @@ main{
         justify-content: right;
         align-items: center;
         flex-wrap: wrap;
-        gap: 30px;
+        gap: 18px;
+        padding: 0;
+
+    a {
+        padding: 21px 4ch;
+        border-radius: 1ch;
+        border: none;
+        text-decoration: none;
+        font-family: "Bebas Neue", sans-serif;
+        font-weight: 400;
+        font-style: normal;
+        font-size: 3ch;
+        border: 4px solid transparent;
+        transition-duration: 300ms;
+        border-radius: 1ch;
+        margin-top: auto;
+        margin-bottom: auto;
+    }
+
+    a:hover {
+        border-radius: 2ch;
+    }
+    
+    .navbutton{
+        background-color: var(--beige);
+        color: var(--pred);
+    }
+
+    .navbutton:hover {
+        border: 4px solid var(--pred);
+    }
+    
+    .currentbutton{
+        background-color: var(--pred);
+        color:var(--beige);
+        border: 4px solid var(--pred);
+    }
+
+    .currentbutton:hover{
+        border: 4px solid var(--beige);
+    }
+}
+
+h1{
+    margin: 0;
 }
 
 }
@@ -63,113 +136,105 @@ main{
 /* Hero Banner CSS */
 .hero_image{
     background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../images/avengers_hero_banner.jpg");
-    height: 50%;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    position: relative;
+    height: 500px;
+    position: static;
     overflow: auto;
+    top: 0px;
 }
 
 .hero_text{
     font-family: "Bebas Neue", sans-serif;
     font-weight: 400;
     font-style: normal;
+    font-size: 4ch;
     text-align: center;
     position: absolute;
-    top: 50%;
+    top: 8em;
     left: 50%;
     transform: translate(-50%, -50%);
     color: white;
+        h1{
+            font-size: 6ch;
+        }
 } 
 
-/* Posters for Grid */
-.poster img {
-    width: 20vw;
-    justify-content: center;
-    
+
+#wrapper {
+    max-width: 1000px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 6ch;
+}
+
+.home_review {
+    display: grid;
+    grid-template-columns: 4 400px;
+    gap: 24px;
+    margin: 20px;
+    margin-bottom: 80px;
 }
 
 .poster {
-    grid-row: 1 / span 2;
-}
-
-/* Grid containers */
-.container {
-    display: grid;
-    grid-auto-rows: 500px;
-    justify-content: space-between;
-
-}
-
-.nested-container {
-    display: grid;
-    grid-template-columns: auto auto auto;
-    grid-template-rows: 50px auto;
-    justify-content: start;
-
-}
-
-.film-title {
-    grid-column: 2 / span 3;
-}
-
-.star_rating {
-    /* grid-column: 3; */
-    width: auto;
-    height: 50px;
-    object-fit: cover;
-}
-
-blockquote {
-border:none;
-font-family: "Bebas Neue", sans-serif;
-margin-bottom:-30px;
-position: relative; 
-max-width: 400px; 
-grid-row: 2;
-grid-column: 2 / span 1;
-    
-}
-
-blockquote p {
-    font-size:21px;
-}
-
-blockquote p:before { 
-    content: "\201C";
-    font-weight: bold;
-    font-size:100px;
-    color:#000000;
-    position: absolute; 
-    top: -0.2em;
-    left: -0.5em; 
-    font-family: 'Georgia'; 
-} 
-blockquote p:after { 
-    content: "\201D";
-    font-weight: bold;
-    font-size:100px;
-    color:#000000;
-    position: absolute; 
-    bottom: 1em;
-    right: 1em; 
-    font-family: 'Georgia'; 
-}
-
-
-
-
-/* Testing */
-.anchor_poster {
     width: 200px;
-    height: 250px;
-
+    border-radius: 12px;
+    height: fit-content;
+    object-fit: contain;
+    grid-column: 1 / 2;
 }
 
-#anchor_container {
-    display: grid;
-    grid-template-columns: auto auto auto auto auto;
+.quotes {
+    width: 40px;
+    object-fit: contain;
+    height: fit-content;
+    grid-column: 2;
+}
 
+.quotes_r {
+    width: 40px;
+    object-fit: contain;
+    height: fit-content;
+    transform: scale(-1);
+    grid-column: 4;
+}
 
+.review-text {
+    margin: 0;
+    grid-column: 3;
+    font-family: "Roboto", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
+    font-variation-settings:
+        "wdth" 100;
+}
+
+@media (max-width: 800px){
+    .home_review {
+        grid-template-rows: fit-content() fit-content();
+        grid-template-columns: auto auto auto;
+    }
+
+    .poster {
+        grid-row: 1;
+        grid-column: 1 / span 4; /* will fix later */
+    }
+
+    .quotes {
+        grid-row: 2;
+        grid-column: 1;
+    }
+
+    .quotes_r {
+        grid-row: 2;
+        grid-column: 4;
+    }
+
+    .review-text {
+        grid-row: 2;
+        grid-column: 2;
+        width: 105%;
+    }
 }
