--- a/css/style.css
+++ b/css/style.css
@@ -162,14 +162,6 @@ h1{
 } 
 
 
-<<<<<<< HEAD
-
-
-/* Posters for Grid */
-.poster img {
-    height: 400px;
-    width: auto;
-=======
 #wrapper {
     max-width: 1000px;
     margin-left: auto;
@@ -249,10 +241,9 @@ h1{
 
 /* Posters for Grid */
 .reviewposter img {
-    width: 20vw;
->>>>>>> 1b2008201e5298f02535c4dec47d85bd91353852
+    width: 15vw;
     justify-content: center;
-    margin: 10%;
+    margin-bottom: 3em;
     
 }
 
@@ -261,110 +252,172 @@ h1{
 }
 
 /* Grid containers */
-.reviewcontainer {
+.container {
     display: grid;
-    grid-auto-rows: 75vh;
-    justify-content: space-between;
+
+    grid-auto-rows: auto;
+    justify-content: center;
 
 }
 
 .nested-container {
     display: grid;
     grid-template-columns: auto auto auto;
-    grid-template-rows: 5vh auto;
+    grid-template-rows: 15% auto;
     justify-content: start;
+    padding-left: 0;
 
 }
 
-.film-title {
-    grid-column: 2 / span 3;
+.film_title {
+    grid-column: 2 / span 1;
+    font-family: "Bebas Neue", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 150%;
 }
+
+.card {
+  width: 20em;
+  height: 3em;
+  margin: 1rem auto;
+  perspective: 1000px;
+  cursor: pointer;
+  margin-left: 1em;
+  grid-column: 4;
+  grid-row: 1;
+}
+
+.card-inner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  transition: transform 0.6s;
+  transform-style: preserve-3d;
+}
+
+.card:hover .card-inner {
+  transform: rotateY(180deg);
+}
+
+.card-front,
+.card-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  backface-visibility: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 0.5rem;
+}
+
+.card-front {
+  background:#E43636;
+  border: 1px solid #e5e7eb;
+}
+
+.card-back {
+  background: black;
+  color:#E43636;
+  transform: rotateY(180deg);
+}
+
 
 .star_rating {
-<<<<<<< HEAD
-    grid-column: 3;
-    width: auto;
-    height: 40px;
-    object-fit: cover;
-    justify-content: start;
-=======
     display: flex;
-    gap: 5px
+    gap: 2em;
+    margin-top: 0;
+    justify-content: center;
+
 }
+
 .star_rating figure {
     margin: 0;
+   
 }
 
 .star_rating img {
     width: 30px;
     height: 30px;
 
->>>>>>> 1b2008201e5298f02535c4dec47d85bd91353852
 }
+
+.rating_title {
+
+    font-family: "Bebas Neue", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 4ch;
+    justify-content: center;
+    text-align: center;
+    color: var(--beige);
+}
+
 
 blockquote {
 border:none;
 font-family: "Bebas Neue", sans-serif;
 margin-bottom:-30px;
 position: relative; 
-max-width: 400px; 
+max-width: 1250px;
 grid-row: 2;
-grid-column: 2 / span 1;
+grid-column: 2 / span 3;
     
 }
 
-blockquote p {
-    font-size:21px;
-}
-
-blockquote p:before { 
-    content: "\201C";
-    font-weight: bold;
-    font-size:100px;
-    color:#000000;
-    position: absolute; 
-    top: -0.2em;
-    left: -0.5em; 
-    font-family: 'Georgia'; 
-} 
-blockquote p:after { 
-    content: "\201D";
-    font-weight: bold;
-    font-size:100px;
-    color:#000000;
-    position: absolute; 
-    bottom: 5.9em;
-    right: -1em; 
-    font-family: 'Georgia'; 
-}
 
 
 
-
-/* Testing */
+/* Anchor Links */
 .anchor_poster {
-<<<<<<< HEAD
-    width: 10vw;
-    height: 25vh;
-=======
     width: 200px;
     height: 250px;
     border: 3px solid transparent;
     transition: border-color 0.3s ease-in-out;
+    
+    
 
 }
 
 .anchor_poster:hover {
     border-color:#E43636
 
->>>>>>> 1b2008201e5298f02535c4dec47d85bd91353852
 
 }
 
 #anchor_container {
     display: grid;
     grid-template-columns: auto auto auto auto auto;
-    padding-top: 30px;
+    margin-top: 5em;
+    margin-left: 3em;
 
 
+}
+
+#OneBattle, #FantasticFour, #Tron, #MinusOne, #NowYouSee  {
+    text-align: center;
+    scroll-margin-top: 150px;
+}
+
+@media (max-width: 800px){
+    #anchor_container {
+        grid-template-columns: auto auto;
+        grid-template-rows: auto auto auto auto auto;
+        justify-content: center;
+    }
+    
+    .container {
+        grid-template-columns: auto;
+        grid-template-rows: auto auto auto auto auto ;
+        justify-content: center;
+    
+    }
+    .nested-container {
+        grid-template-columns: auto;
+        grid-template-rows: auto auto auto auto auto;
+        justify-content: center;
+        
+    
+    }
 }
