--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,16 @@
-:root{
+:root {
     .limelight-regular {
         font-family: "Limelight", sans-serif;
         font-weight: 400;
         font-style: normal;
-}
+    }
+
     .bebas-neue-regular {
         font-family: "Bebas Neue", sans-serif;
         font-weight: 400;
         font-style: normal;
-}
+    }
+
     .roboto-normal {
         font-family: "Roboto", sans-serif;
         font-optical-sizing: auto;
@@ -16,16 +18,16 @@
         font-style: normal;
         font-variation-settings:
             "wdth" 100;
-}
+    }
+
     --cham: #F6EFD2;
     --pred: #E43636;
     --beige: #E2DDB4;
     --cadyellow: #FDDA0D;
-    --strawberry: #f38d8d;
 
 }
 
-*::selection{
+*::selection {
     background-color: var(--pred);
     color: white;
 }
@@ -36,19 +38,19 @@ body {
     flex-direction: column;
 }
 
-html { 
+html {
     overscroll-behavior: none;
 }
 
-main{    
+main {
     background-color: var(--cham);
     position: static;
 }
 
 /* Header */
-#fullheader{
+#fullheader {
     display: grid;
-    grid-template-columns: minmax(0, 1fr); 
+    grid-template-columns: minmax(0, 1fr);
     grid-template-rows: auto;
     background-color: rgba(0, 0, 0, 0);
     backdrop-filter: blur(16px);
@@ -60,7 +62,7 @@ main{
     padding: 0 18px 0 24px;
     box-sizing: border-box;
 
-    #title{
+    #title {
         grid-column: 1;
         grid-row: 1;
         background-image: url(../images/title.svg);
@@ -72,14 +74,14 @@ main{
         max-width: 30em;
     }
 
-    nav{
+    nav {
         margin-left: 10px;
         height: 100%;
         grid-column: 2;
-        grid-row: 1;    
+        grid-row: 1;
     }
-    
-    #navmenu{
+
+    #navmenu {
         margin: 0px;
         height: 100%;
         display: flex;
@@ -89,54 +91,54 @@ main{
         gap: 18px;
         padding: 0;
 
-    a {
-        padding: 1em 1.75em;
-        border-radius: 1ch;
-        border: none;
-        text-decoration: none;
-        font-family: "Bebas Neue", sans-serif;
-        font-weight: 400;
-        font-style: normal;
-        font-size: min(3.5vw, 3ch);
-        border: 4px solid transparent;
-        transition-duration: 300ms;
-        border-radius: 1ch;
-        margin-top: auto;
-        margin-bottom: auto;
+        a {
+            padding: 1em 1.75em;
+            border-radius: 1ch;
+            border: none;
+            text-decoration: none;
+            font-family: "Bebas Neue", sans-serif;
+            font-weight: 400;
+            font-style: normal;
+            font-size: min(3.5vw, 3ch);
+            border: 4px solid transparent;
+            transition-duration: 300ms;
+            border-radius: 1ch;
+            margin-top: auto;
+            margin-bottom: auto;
+        }
+
+        a:hover {
+            border-radius: 2ch;
+        }
+
+        .navbutton {
+            background-color: var(--beige);
+            color: var(--pred);
+        }
+
+        .navbutton:hover {
+            border: 4px solid var(--pred);
+        }
+
+        .currentbutton {
+            background-color: var(--pred);
+            color: var(--beige);
+            border: 4px solid var(--pred);
+        }
+
+        .currentbutton:hover {
+            border: 4px solid var(--beige);
+        }
     }
 
-    a:hover {
-        border-radius: 2ch;
+    h1 {
+        margin: 0;
     }
-    
-    .navbutton{
-        background-color: var(--beige);
-        color: var(--pred);
-    }
-
-    .navbutton:hover {
-        border: 4px solid var(--pred);
-    }
-    
-    .currentbutton{
-        background-color: var(--pred);
-        color:var(--beige);
-        border: 4px solid var(--pred);
-    }
-
-    .currentbutton:hover{
-        border: 4px solid var(--beige);
-    }
-}
-
-h1{
-    margin: 0;
-}
 
 }
 
 /* Hero Banner CSS */
-.hero_image{
+.hero_image {
     background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../images/avengers_hero_banner.jpg");
     background-position: center;
     background-repeat: no-repeat;
@@ -147,7 +149,7 @@ h1{
     top: 0px;
 }
 
-.hero_text{
+.hero_text {
     font-family: "Bebas Neue", sans-serif;
     font-weight: 400;
     font-style: normal;
@@ -158,10 +160,11 @@ h1{
     left: 50%;
     transform: translate(-50%, -50%);
     color: white;
-        h1{
-            font-size: 6ch;
-        }
-} 
+
+    h1 {
+        font-size: 6ch;
+    }
+}
 
 
 #home-wrapper {
@@ -183,6 +186,7 @@ h1{
     border-radius: 12px;
     height: fit-content;
     object-fit: contain;
+    user-select: none;
 }
 
 .quotes {
@@ -208,7 +212,63 @@ h1{
         "wdth" 100;
 }
 
-@media (max-width: 800px){
+#footcontact {
+    padding: 0 5%;
+    font-family: "Bebas Neue", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    color: var(--cham)
+}
+
+footer {
+    background-color: var(--pred);
+    padding-bottom: 1em;
+
+    ul {
+        text-decoration: none;
+        color: var(--cham);
+        display: flex;
+        justify-content: space-between;
+        padding: 0 5%;
+        font-family: "Bebas Neue", sans-serif;
+        font-weight: 400;
+        font-style: normal;
+        list-style-type: none;
+
+        a {
+            text-decoration: none;
+            color: var(--cham);
+            transition-duration: 400ms;
+        }
+
+        a:hover {
+            color: var(--cadyellow);
+        }
+    }
+
+    p {
+        margin-top: 2em;
+        padding: 0 5%;
+        font-size: 0.75em;
+        font-family: "Roboto", sans-serif;
+        font-optical-sizing: auto;
+        font-weight: 400;
+        font-style: normal;
+        font-variation-settings:
+            "wdth" 100;
+        color: var(--cham)
+    }
+
+}
+
+footer a::selection,
+p::selection,
+h2::selection {
+    background-color: var(--cham);
+    color: var(--pred);
+}
+
+@media (max-width: 800px) {
 
     .quotes {
         display: none;
@@ -251,7 +311,7 @@ h1{
     }
 }
 
-@media (max-width: 500px){
+@media (max-width: 500px) {
     .poster {
         width: 100%;
     }
@@ -271,52 +331,4 @@ h1{
     #home-wrapper {
         margin-top: 1em;
     }
-
-}
-
-#footcontact{
-    padding: 0 5%;
-    font-family: "Bebas Neue", sans-serif;
-    font-weight: 400;
-    font-style: normal;
-    color:var(--cham)
-}
-
-footer{
-    background-color: var(--pred);
-    padding-bottom: 1em;
-    ul {
-        text-decoration: none;
-        color: var(--cham);
-        display: flex;
-        justify-content: space-between;
-        padding: 0 5%;
-        font-family: "Bebas Neue", sans-serif;
-        font-weight: 400;
-        font-style: normal;
-        list-style-type: none;
-        a{
-            text-decoration: none;
-            color: var(--cham);
-            transition-duration: 400ms;
-        }
-
-        a:hover{
-            color: var(--cadyellow);
-        }
-    }
-
-    p{
-        margin-top: 2em;
-        padding: 0 5%;
-        font-size: 0.75em;
-        font-family: "Roboto", sans-serif;
-        font-optical-sizing: auto;
-        font-weight: 400;
-        font-style: normal;
-        font-variation-settings:
-            "wdth" 100;
-        color: var(--strawberry)
-    }
-    
 }
