changed footer's p color

--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,7 @@
     --pred: #E43636;
     --beige: #E2DDB4;
     --cadyellow: #FDDA0D;
+    --strawberry: #e38e8e;
 
 }
 
@@ -261,7 +262,7 @@ footer {
         font-style: normal;
         font-variation-settings:
             "wdth" 100;
-        color: var(--cham)
+        color: var(--strawberry)
     }
 
     a::selection,
