--- a/css/style.css
+++ b/css/style.css
@@ -357,7 +357,7 @@ h1{
 
 blockquote {
 border:none;
-font-family: "Bebas Neue", sans-serif;
+font-family: "Roboto", sans-serif;
 margin-bottom:-30px;
 position: relative; 
 max-width: 1250px;
@@ -401,23 +401,67 @@ grid-column: 2 / span 3;
 }
 
 @media (max-width: 800px){
-    #anchor_container {
-        grid-template-columns: auto auto;
-        grid-template-rows: auto auto auto auto auto;
-        justify-content: center;
+    .reviewposter,
+    .film_title,
+    .nested-container,
+    .card,
+    blockquote {
+        grid-column: span 1 !important;
+        grid-row: auto !important;
     }
-    
+
     .container {
-        grid-template-columns: auto;
-        grid-template-rows: auto auto auto auto auto ;
-        justify-content: center;
-    
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 100%;
     }
+
     .nested-container {
-        grid-template-columns: auto;
-        grid-template-rows: auto auto auto auto auto;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 100%;
+    }
+
+    .reviewposter img {
+        width: 60vw;
+        max-width: 300px;
+        margin-bottom: 1em;
+    }
+
+    .film_title {
+        text-align: center;
+        font-size: 1.8rem;
+    }
+
+    blockquote {
+        max-width: 100%;
+        margin: 0 1em;
+        text-align: center;
+    }
+
+    .card {
+        width: 15em;
+        height: 3.5em;
+        margin: 1em auto;
+    }
+
+    .star_rating {
         justify-content: center;
-        
-    
+        gap: 0.6em;
+    }
+
+    #anchor_container {
+        grid-template-columns: repeat(2, minmax(0, 1fr));
+        justify-items: center;
+        margin-left: 0;
+        gap: 1.5em;
+    }
+
+    .anchor_poster {
+        width: 35vw;
+        max-width: 160px;
+        height: auto;
     }
 }
