--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,5 @@
+/* TO BE MERGED WITH STYLE.CSS (DRAFT) */
+
 :root{
     .limelight-regular {
         font-family: "Limelight", sans-serif;
@@ -208,7 +210,7 @@ h1{
     font-weight: 400;
     font-style: normal;
     font-variation-settings:
-        "wdth" 100;
+        "width" 100;
 }
 
 @media (max-width: 800px){
@@ -237,4 +239,72 @@ h1{
         grid-column: 2;
         width: 105%;
     }
+}
+
+/* contact.css changes here */
+
+main {
+    position: relative;
+    text-align: center;
+    padding-bottom: 128px;
+    height: 100%;
+}
+
+#form {
+    position: relative;
+    width: 500px;
+    margin: 0px auto 0px auto;
+    padding-top: 15px
+}
+
+input {
+    width: 470px;
+    height: 50px;
+    padding: 0px 15px 0px 15px;
+
+    background: transparent;
+    outline: none;
+    border: solid 1px #e43636;
+
+    transition: all 0.3s ease-in-out;
+    -webkit-transition: all 0.3s ease-in-out;
+    -moz-transition: all 0.3s ease-in-out;
+    -ms-transition: all 0.3s ease-in-out;
+}
+
+textarea {
+    width: 470px;
+    max-width: 470px;
+    height: 110px;
+    padding: 15px;
+
+    background: transparent;
+    outline: none;
+
+    border: solid 1px #e43636;
+
+    transition: all 0.3s ease-in-out;
+    -webkit-transition: all 0.3s ease-in-out;
+    -moz-transition: all 0.3s ease-in-out;
+    -ms-transition: all 0.3s ease-in-out;
+}
+
+input:hover, textarea:hover {
+    background: #c5bfa8
+}
+
+#submit {
+    width: 502px;
+
+    padding: 0;
+    margin: -5px 0px 0px 0px;
+
+    outline: none;
+    cursor: pointer;
+
+    border: solid 1px #e43636;
+}
+
+#submit:hover {
+    background: #c5bfa8
 }
