--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,8 @@
         font-family: "Bebas Neue", sans-serif;
         font-weight: 400;
         font-style: normal;
-}
+    }
+
     .roboto-normal {
         font-family: "Roboto", sans-serif;
         font-optical-sizing: auto;
@@ -105,8 +106,9 @@ main {
             border-radius: 1ch;
             margin-top: auto;
             margin-bottom: auto;
-    
-    }
+
+        }
+
         a:hover {
             border-radius: 2ch;
         }
@@ -179,6 +181,100 @@ main {
     margin-top: 6ch;
 }
 
+.home_review {
+    display: flex;
+    gap: 24px;
+    margin: 1em;
+    margin-bottom: 80px;
+}
+
+.poster {
+    width: 200px;
+    border-radius: 12px;
+    height: fit-content;
+    object-fit: contain;
+    user-select: none;
+}
+
+.quotes {
+    width: 40px;
+    object-fit: contain;
+    height: fit-content;
+}
+
+.quotes_r {
+    width: 40px;
+    object-fit: contain;
+    height: fit-content;
+    transform: scale(-1);
+}
+
+.review-text {
+    margin: 0;
+    font-family: "Roboto", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
+    font-variation-settings:
+        "wdth" 100;
+}
+
+#footcontact {
+    padding: 0 5%;
+    font-family: "Bebas Neue", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    color: var(--cham)
+}
+
+footer {
+    background-color: var(--pred);
+    padding-bottom: 1em;
+
+    ul {
+        text-decoration: none;
+        color: var(--cham);
+        display: flex;
+        justify-content: space-between;
+        padding: 0 5%;
+        font-family: "Bebas Neue", sans-serif;
+        font-weight: 400;
+        font-style: normal;
+        list-style-type: none;
+
+        a {
+            text-decoration: none;
+            color: var(--cham);
+            transition-duration: 400ms;
+        }
+
+        a:hover {
+            color: var(--cadyellow);
+        }
+    }
+
+    p {
+        margin-top: 2em;
+        padding: 0 5%;
+        font-size: 0.75em;
+        font-family: "Roboto", sans-serif;
+        font-optical-sizing: auto;
+        font-weight: 400;
+        font-style: normal;
+        font-variation-settings:
+            "wdth" 100;
+        color: var(--cham)
+    }
+
+    a::selection,
+    p::selection,
+    h2::selection {
+        background-color: var(--cham);
+        color: var(--pred);
+    }
+
+}
+
 .nested-container {
     display: grid;
     grid-template-columns: auto auto auto;
@@ -197,49 +293,49 @@ main {
 }
 
 .card {
-  width: 20em;
-  height: 3em;
-  margin: 1rem auto;
-  perspective: 1000px;
-  cursor: pointer;
-  margin-left: 1em;
-  grid-column: 4;
-  grid-row: 1;
+    width: 20em;
+    height: 3em;
+    margin: 1rem auto;
+    perspective: 1000px;
+    cursor: pointer;
+    margin-left: 1em;
+    grid-column: 4;
+    grid-row: 1;
 }
 
 .card-inner {
-  position: relative;
-  width: 100%;
-  height: 100%;
-  transition: transform 0.6s;
-  transform-style: preserve-3d;
+    position: relative;
+    width: 100%;
+    height: 100%;
+    transition: transform 0.6s;
+    transform-style: preserve-3d;
 }
 
 .card:hover .card-inner {
-  transform: rotateY(180deg);
+    transform: rotateY(180deg);
 }
 
 .card-front,
 .card-back {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  backface-visibility: hidden;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border-radius: 0.5rem;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    backface-visibility: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 0.5rem;
 }
 
 .card-front {
-  background:#E43636;
-  border: 1px solid #e5e7eb;
+    background: #E43636;
+    border: 1px solid #e5e7eb;
 }
 
 .card-back {
-  background: black;
-  color:#E43636;
-  transform: rotateY(180deg);
+    background: black;
+    color: #E43636;
+    transform: rotateY(180deg);
 }
 
 
@@ -253,7 +349,7 @@ main {
 
 .star_rating figure {
     margin: 0;
-   
+
 }
 
 .star_rating img {
@@ -275,14 +371,14 @@ main {
 
 
 blockquote {
-    border:none;
+    border: none;
     font-family: "Roboto", sans-serif;
-    margin-bottom:-30px;
-    position: relative; 
+    margin-bottom: -30px;
+    position: relative;
     max-width: 1250px;
     grid-row: 2;
     grid-column: 2 / span 3;
-    
+
 }
 
 /* Anchor Links */
@@ -291,15 +387,17 @@ blockquote {
     height: 250px;
     border: 3px solid transparent;
     transition: border-color 0.3s ease-in-out;
-    
-    
+
+
 }
-input:hover, textarea:hover {
+
+input:hover,
+textarea:hover {
     background: #c5bfa8
 }
 
 .anchor_poster:hover {
-    border-color:#E43636
+    border-color: #E43636
 }
 
 
@@ -310,14 +408,18 @@ input:hover, textarea:hover {
     margin-left: 3em;
 }
 
-#OneBattle, #FantasticFour, #Tron, #MinusOne, #NowYouSee  {
+#OneBattle,
+#FantasticFour,
+#Tron,
+#MinusOne,
+#NowYouSee {
     text-align: center;
     scroll-margin-top: 150px;
 }
 
 /* contact.css changes here */
 
-#contactmain{
+#contactmain {
     position: relative;
     text-align: center;
     padding-bottom: 128px;
