--- a/css/style.css
+++ b/css/style.css
@@ -210,6 +210,7 @@ main {
 }
 
 .review-text {
+    height: 100%;
     margin: 0;
     font-family: "Roboto", sans-serif;
     font-optical-sizing: auto;
@@ -217,6 +218,14 @@ main {
     font-style: normal;
     font-variation-settings:
         "wdth" 100;
+}
+
+
+#maintext{
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 1000px;
+    padding: 1em;
 }
 
 #footcontact {
@@ -301,7 +310,7 @@ footer {
     font-family: "Bebas Neue", sans-serif;
     font-weight: 400;
     font-style: normal;
-    font-size: 150%;
+    font-size: 2em;
 }
 
 .card {
@@ -439,16 +448,21 @@ textarea:hover {
 }
 
 #form {
+    display: flex;
+    flex-direction: column;
     position: relative;
-    width: 500px;
+    align-content: center;
+    justify-content: center;
+    max-width: 500px;
     margin: 0px auto 0px auto;
     padding-top: 15px
 }
 
 input {
-    width: 470px;
+    box-sizing: border-box;
+    width: 100%;
     height: 50px;
-    padding: 0px 15px 0px 15px;
+    padding: 1em;
 
     background: transparent;
     outline: none;
@@ -461,10 +475,10 @@ input {
 }
 
 textarea {
-    width: 470px;
-    max-width: 470px;
+    padding: 1em;
+    box-sizing: border-box;
+    width: 100%;
     height: 110px;
-    padding: 15px;
 
     background: transparent;
     outline: none;
@@ -475,13 +489,28 @@ textarea {
     -webkit-transition: all 0.3s ease-in-out;
     -moz-transition: all 0.3s ease-in-out;
     -ms-transition: all 0.3s ease-in-out;
+
+    margin: 0;
+    font-family: "Roboto", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 13px;
+    font-variation-settings:
+        "wdth" 100;
+}
+
+#contactmain h2 {
+    font-family: "Bebas Neue", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 3em;
 }
 
 #submit {
-    width: 502px;
+    width: 100%;
 
     padding: 0;
-    margin: -5px 0px 0px 0px;
 
     outline: none;
     cursor: pointer;
