--- a/css/style.css
+++ b/css/style.css
@@ -272,7 +272,7 @@ footer {
         font-style: normal;
         font-variation-settings:
             "wdth" 100;
-        color: var(--cham)
+        color: var(--strawberry)
     }
 
     a::selection,
@@ -533,7 +533,7 @@ textarea {
 
 @media (max-width: 800px) {
 
-    .quotes {
+    .quotes, .quotes_r {
         display: none;
     }
 
