--- a/css/style.css
+++ b/css/style.css
@@ -175,7 +175,7 @@ main {
 
 
 #home-wrapper {
-    max-width: 1000px;
+    max-width: 90rem;
     margin-left: auto;
     margin-right: auto;
     margin-top: 6ch;
@@ -197,13 +197,13 @@ main {
 }
 
 .quotes {
-    width: 40px;
+    width: 2.5rem;
     object-fit: contain;
     height: fit-content;
 }
 
 .quotes_r {
-    width: 40px;
+    width: 2.5rem;
     object-fit: contain;
     height: fit-content;
     transform: scale(-1);
@@ -221,10 +221,10 @@ main {
 }
 
 
-#maintext{
+#maintext {
     margin-left: auto;
     margin-right: auto;
-    max-width: 1000px;
+    max-width: 90rem;
     padding: 1em;
 }
 
@@ -286,49 +286,52 @@ footer {
 
 /* Posters for Grid */
 .reviewposter img {
-    width: 15vw;
+    width: 15rem;
     justify-content: center;
-    margin-bottom: 3em;
     border-radius: 1em;
-    
 }
 
 .reviewposter {
-    margin-top: 0;
-    grid-row: 1;
+    margin: 0 2.5rem 0 2.5rem;
+    grid-row: 1 / span 2;
     align-self: start;
+    height: 100%;
+}
+
+.container {
+    max-width: 90rem;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .nested-container {
     display: grid;
-    grid-template-columns: auto auto auto;
-    grid-template-rows: 5em 1fr;
+    grid-template-columns: auto auto auto 320px;
+    grid-template-rows: 3em 1fr;
     justify-content: start;
-    padding-left: 0;
-    padding-bottom: 4em;
     row-gap: 0px;
     height: 75%;
+    margin: 0 2em 4em 0;
 }
 
 .film_title {
     max-width: 400px;
     display: flex;
-    grid-column: 2 / span 2;    
+    grid-column: 2 / span 2;
     font-family: "Bebas Neue", sans-serif;
     font-weight: 400;
     font-style: normal;
     font-size: 2em;
-    align-items: start;
-    margin-top: 0;
+    align-items: center;
+    margin: 0;
+    margin-right: 1em;
 }
 
 .card {
     width: 20em;
     height: 3em;
-    margin: 0 1rem 1rem 1rem;
     perspective: 1000px;
     cursor: pointer;
-    margin-left: 1em;
     grid-column: 4;
     grid-row: 1;
 }
@@ -408,7 +411,7 @@ blockquote {
     height: fit-content;
     grid-row: 2;
     grid-column: 2 / span 3;
-
+    margin: 0;
 }
 
 /* Anchor Links */
@@ -533,13 +536,15 @@ textarea {
     background: #c5bfa8;
 }
 
-form input, textarea {
+form input,
+textarea {
     border-radius: 1em;
-} 
+}
 
 @media (max-width: 800px) {
 
-    .quotes, .quotes_r {
+    .quotes,
+    .quotes_r {
         display: none;
     }
 
@@ -564,9 +569,10 @@ form input, textarea {
         flex-direction: column;
         align-items: center;
         width: 100%;
+        margin: 1rem;
     }
 
-    .reviewposter{
+    .reviewposter {
         align-self: center;
     }
 
@@ -662,5 +668,17 @@ form input, textarea {
 
     #anchor_container {
         margin-top: 5em;
+    }
+}
+
+@media (max-width: 1050px) {
+    .reviewposter {
+        grid-row: 2;
+        margin-top: 1rem;
+    }
+
+    .film_title {
+        grid-column: 1 / span 3;
+        margin-left: 2.5rem;
     }
 }
