--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+/* Imported fonts from Google Fonts */
 :root {
     .limelight-regular {
         font-family: "Limelight", sans-serif;
@@ -20,6 +21,7 @@
             "wdth" 100;
     }
 
+    /* Pre-set colour values for easy and consistent design */
     --cham: #F6EFD2;
     --pred: #E43636;
     --beige: #E2DDB4;
@@ -28,6 +30,7 @@
 
 }
 
+/* Controls colour of selected text */
 *::selection {
     background-color: var(--pred);
     color: var(--cham);
@@ -39,6 +42,7 @@ body {
     flex-direction: column;
 }
 
+/* Makes overscroll look better than white with the dark hero image and red footer */
 html {
     background-color: black;
 }
@@ -173,7 +177,7 @@ main {
     }
 }
 
-
+/* Home Page */
 #home-wrapper {
     max-width: 90rem;
     margin-left: auto;
@@ -236,6 +240,7 @@ main {
     color: var(--cham)
 }
 
+/* Footer */
 footer {
     background-color: var(--pred);
     padding-bottom: 1em;
@@ -556,6 +561,8 @@ textarea {
     border-radius: 1em;
 }
 
+/* Media queries for responsive design */
+
 @media (max-width: 800px) {
 
     .quotes,
@@ -666,7 +673,6 @@ textarea {
 
     #anchor_container {
         grid-template-columns: auto auto;
-        /* grid-template-rows: 20rem 20rem 20rem; */
         gap: 1.5em;
     }
 }
